feat: Add Search for Top Books
