# swagger.json
@@ -1654,6 +1654,33 @@
         }
       }
     },
+    "/biblioreports/topbooks": {
+      "get": {
+        "summary": "Ver os 10 livros mais lidos",
+        "description": "Ver os 10 livros mais lidos.",
+        "tags": ["BiblioReports"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Busca realizada com sucesso!",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#components/schemas/TopBooksResponse"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Erro ao realizar a busca!"
+          }
+        }
+      }
+    },
     "/checkprivs/viewcheckprivs": {
       "get": {
         "summary": "Ver todas as informações de permanência.",
@@ -5770,6 +5797,43 @@
                 "createAt": {
                   "type": "string",
                   "example": "2024-10-25T14:10:28.152Z"
+                }
+              }
+            }
+          }
+        }
+      },
+      "TopBooksResponse": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "example": "success"
+          },
+          "message": {
+            "type": "string",
+            "example": "Busca realizada com sucesso!"
+          },
+          "topbooks": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "bibid": {
+                  "type": "number",
+                  "example": 1237
+                },
+                "count": {
+                  "type": "number",
+                  "example": 2222
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Capitães da Areia"
+                },
+                "author": {
+                  "type": "string",
+                  "example": "Amado, Jorge"
                 }
               }
             }
